@@ -9,53 +9,19 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static hr.fer.progi.backend.entity.Permission.*;
-
 @Getter
 @RequiredArgsConstructor
 public enum Role {
 
     EMPLOYEE(Collections.emptySet()),
 
-    REVISER(Set.of(
-            CHANGE_DOCUMENT_CATEGORY
-    )),
+    REVISER(Collections.emptySet()),
 
-    ACCOUNTANT_RECEIPT(Set.of(
-            ARCHIVE_DOCUMENT,
-            ARCHIVE_ALL_DOCUMENTS,
-            ARCHIVE_DELETE_DOCUMENT,
-            DOCUMENT_GET_BY_TYPE,
-            DOCUMENT_GET_BY_ID,
-            DOCUMENT_SEND_TO_SIGN,
-            DOCUMENT_CHANGE_CATEGORY
-    )),
-    ACCOUNTANT_OFFER(Set.of(
-            ARCHIVE_DOCUMENT,
-            ARCHIVE_ALL_DOCUMENTS,
-            ARCHIVE_DELETE_DOCUMENT,
-            DOCUMENT_GET_BY_TYPE,
-            DOCUMENT_GET_BY_ID,
-            DOCUMENT_SEND_TO_SIGN,
-            DOCUMENT_CHANGE_CATEGORY
-    )),
-    ACCOUNTANT_INT_DOC(Set.of(
-            ARCHIVE_DOCUMENT,
-            ARCHIVE_ALL_DOCUMENTS,
-            ARCHIVE_DELETE_DOCUMENT,
-            DOCUMENT_GET_BY_TYPE,
-            DOCUMENT_GET_BY_ID,
-            DOCUMENT_SEND_TO_SIGN,
-            DOCUMENT_CHANGE_CATEGORY
-    )),
+    ACCOUNTANT_RECEIPT(Collections.emptySet()),
+    ACCOUNTANT_OFFER(Collections.emptySet()),
+    ACCOUNTANT_INT_DOC(Collections.emptySet()),
 
-    DIRECTOR(Set.of(
-            ALL_EMPLOYEE_STATISTICS,
-            EMPLOYEE_STATISTICS,
-            DELETE_EMPLOYEE_ACCOUNT,
-            CHANGE_DOCUMENT_CATEGORY,
-            DELETE_ARCHIVE_DOCUMENT
-    ));
+    DIRECTOR(Collections.emptySet());
 
     private final Set<Permission> permissions;
 
